# KaliDNS-Switcher

./: LICENSE  README.md  kalidns.py  pyproject.toml  test_kalidns.py
.github/workflows/: ci.yml
kalidns_modules/: benchmark.py  config.py  dns_manager.py  tui.py  utils.py
tests/: test_benchmark.py  test_config.py  test_dns_manager.py  test_lint.py  test_utils.py
